nodejs-tekton-guide/cicd/tekton-pipeline/el-deploy/event-listener-nodejs-tekton-deploy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener-nodejs-tekton-deploy
  name: el-event-listener-nodejs-tekton-deploy
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/managed-by: EventListener
      app.kubernetes.io/part-of: Triggers
      eventlistener: event-listener-nodejs-tekton-deploy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/managed-by: EventListener
        app.kubernetes.io/part-of: Triggers
        eventlistener: event-listener-nodejs-tekton-deploy
    spec:
      containers:
      - args:
        - --el-name=event-listener-nodejs-tekton-deploy
        - --port=8080
        - --readtimeout=5
        - --writetimeout=40
        - --idletimeout=120
        - --timeouthandler=30
        - --is-multi-ns=false
        - --payload-validation=true
        - --tls-cert=
        - --tls-key=
        image: registry.redhat.io/openshift-pipelines/pipelines-triggers-eventlistenersink-rhel8@sha256:572882f548bd4dcc1cda89151a444043c85a56963cb495ac1862219204fa8950
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 1
          httpGet:
            path: /live
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: event-listener
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 9000
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /live
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/config-logging
          name: config-logging
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: pipeline
      serviceAccountName: pipeline
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: config-logging-triggers
        name: config-logging
